Bug 89140 - Calc row paste doesn't keep row height
Summary: Calc row paste doesn't keep row height
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Arul Michael
URL:
Whiteboard: target:5.2.0 target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-02-05 17:30 UTC by ramonvaldezz
Modified: 2019-12-07 19:15 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ramonvaldezz 2015-02-05 17:30:11 UTC
Calc 4.4.0.3 (PortableApps version): when you copy and then paste a row, it doesn’t paste the row height.
Column pasting works as always.

Steps to reproduce:
- new file
- change the height of an empty row
- select a whole row
- copy (ctrl+C)
- paste in other empty row
- the row height is not changed.

Operating System: Windows 8.1 x64
Version: 4.4.0.3
Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Comment 1 Wolfgang Jäger 2015-02-05 18:49:14 UTC
The bug was discussed in a forum topic: http://en.libreofficeforum.org/node/10204
I can confirm it. 

An additional observation: Copying a COMPLETE SHEET containing changed row heights and then pasting it into another sheet will correctly also paste the row heights.
Comment 2 Matthew Francis 2015-02-10 11:22:41 UTC
Also confirmed on OSX / 4.4.0.3

Setting Platform -> All
Comment 3 Rostislav 'R.Yu.' Okulov 2015-02-10 12:54:19 UTC
git bisect start
# bad: [4a3091e95fa263d3e2dd81e56e83996f0bb12287] source-hash-2b5b04e1e62914bf0902dfd7943cdc44499c47a6
git bisect bad 4a3091e95fa263d3e2dd81e56e83996f0bb12287
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect good 812c4a492375ac47b3557fbb32f5637fc89d60d9
# good: [5d0dfb8e62ae61a240f8313c594d4560e7c8e048] source-hash-0c6cd530de13f80795881f61064f1bf1dcc4ea81
git bisect good 5d0dfb8e62ae61a240f8313c594d4560e7c8e048
# good: [7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5] source-hash-f93ce4f7eb90093d0ea3115d0a1c614612676dbd
git bisect good 7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5
# good: [a42da134cd542144fca7ba14cce86c2b409fc18a] source-hash-beadebc0f7eb5582fcb8dcb082d19afdf2751876
git bisect good a42da134cd542144fca7ba14cce86c2b409fc18a
# good: [038f586bf711ad77856916be954b6c02a5717eb1] source-hash-2ec4c8b07427af868e32e14aaefd20649c1135d6
git bisect good 038f586bf711ad77856916be954b6c02a5717eb1
# good: [1c1bb47aa932531a0486c1af5460f7f7f3de510a] source-hash-16068663e2aa984388be5f774b8f1917c12bf6f3
git bisect good 1c1bb47aa932531a0486c1af5460f7f7f3de510a
# good: [5e3b82d0ec3ad9bd56157084cd18d4d0427d388e] source-hash-30123b9559e2fb74c9db7d530c538a1c6dc7e32c
git bisect good 5e3b82d0ec3ad9bd56157084cd18d4d0427d388e
# good: [d555357ed375bf1d6805e3773dc9b3527278df0f] source-hash-9e1afe84ec73b1eb183ca42204a518d6deede292
git bisect good d555357ed375bf1d6805e3773dc9b3527278df0f
# bad: [49e272aee271eddf26d5abb1dd9f4aa09af3571d] source-hash-1b9aaba0bfe8bc0872e7ea9f9aef5961e4b52f7c
git bisect bad 49e272aee271eddf26d5abb1dd9f4aa09af3571d
# bad: [aea63463100a53421c79410c839059a1cea30fb9] source-hash-6b4e767cf90e4f384a6b3dd43aa51c09b500b97b
git bisect bad aea63463100a53421c79410c839059a1cea30fb9
# first bad commit: [aea63463100a53421c79410c839059a1cea30fb9] source-hash-6b4e767cf90e4f384a6b3dd43aa51c09b500b97b

 aea63463100a53421c79410c839059a1cea30fb9 is the first bad commit
commit aea63463100a53421c79410c839059a1cea30fb9
Author: Robinson Tryon <qubit@runcibility.com>
Date:   Wed Dec 3 01:11:21 2014 +0100

    source-hash-6b4e767cf90e4f384a6b3dd43aa51c09b500b97b
    
    commit 6b4e767cf90e4f384a6b3dd43aa51c09b500b97b
    Author:     Kohei Yoshida <kohei.yoshida@collabora.com>
    AuthorDate: Mon Nov 17 17:37:07 2014 -0500
    Commit:     Kohei Yoshida <kohei.yoshida@collabora.com>
    CommitDate: Tue Nov 18 08:31:57 2014 -0500
    
        Use group-area listeners during copy & paste if we can.
    
        This should reduce the number of area listeners generated esp. when
        replicating tons of formula cells down the column.
    
        Change-Id: I1ea8f51f667e6b0e1a646f84d79f5e8430b478d5

:100644 100644 6c39bf50489d63efab7e16734f94b88f5a402ac2 c1aa22067bc93523a448e2e3d1825a5b0156089a M      ccache.log
:100644 100644 8f0ed08f3e3238ee51209273a84fa8ae0b52e9ad f6bfe4c5e1edd6d38155e3e30b2a269e4f0201ae M      commitmsg
:100644 100644 03b5dc0a7b266f9e172d8bd22171a7e08ffa4d5c 1c1507b0a34d3d3a84485fd663094cce0d8b90f9 M      make.log
:040000 040000 ced63772d1a9c8ae99c007a3c63353fb15b04965 8560bf1a5bb12e2196a3ee223a7d70351563851f M      opt
Comment 4 andréb 2015-02-26 18:07:16 UTC
Isn't that expected behavior ?
If the row height is explicitly set, then it no longer automatically adjusts.
If the row is set to optimal height, this removes the explicit setting, and it should adjust automatically to whatever changes in content.

With the explicit setting removed, doesn't the row height adjust automatically to the new content ?
Comment 5 Robinson Tryon (qubit) 2015-03-05 20:13:42 UTC Comment hidden (obsolete)
Comment 6 Matthew Francis 2015-03-15 05:05:15 UTC
This seems to have been introduced by the below commit

    commit ff5aad0a26aac46a3a540ac6ed2b7eca4a8cd23d
    Author:     Kohei Yoshida <kohei.yoshida@collabora.com>
    AuthorDate: Mon Nov 10 18:45:21 2014 -0500
    Commit:     Kohei Yoshida <kohei.yoshida@collabora.com>
    CommitDate: Tue Nov 18 08:31:53 2014 -0500
    
        Speed up pasting of single row onto multiple destination rows.
    
        This is an extension of the earlier paste optimization of a single cell
        across multiple destination cells.
    
        Change-Id: I3a60300d3d0e11420d997bea8f7f540e948f56cc
Comment 7 Robinson Tryon (qubit) 2015-12-13 11:12:01 UTC Comment hidden (obsolete)
Comment 8 Arul Michael 2016-01-22 03:23:39 UTC
Following patch has been submitted as fix for this

https://gerrit.libreoffice.org/#/c/21665/

Thanks
Comment 9 Commit Notification 2016-02-03 14:10:26 UTC
Arul committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=403ca446458268ae04d42f666223974f525e8df8

tdf#89140:Calc row paste doesn't keep row height

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Markus Mohrhard 2016-04-16 10:31:38 UTC
Seems to be fixed in master.
Comment 11 Commit Notification 2018-05-10 14:51:26 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb749eb664d1908a1e507983989768227d4e5203

uitest - Calc-Format-Rows + tdf#89140

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 raal 2019-12-07 19:15:17 UTC
The test exist, set status to Verified.