tdf#89140:Calc row paste doesn't keep row height

Change-Id: Ibf9a5674711cf496706c4d3ac9d3133016aea39d